fix netapp logo alignment on mobile devices

--- a/main.css
+++ b/main.css
@@ -52,6 +52,10 @@ html {
     div.item-text {
       margin: 0;
     }
+    div.netapp-item-text {
+      margin-left: 0px;
+      padding-left: 0px;
+    }
     p.about-me-text {
       width: 90%;
     }
@@ -250,7 +254,7 @@ p {
 .tall-logo {
   height: 200px;
   width: 175px;
-  /*margin-right: 25px;*/
+  padding-left: 25px;
 }
 
 .github-logo {
@@ -361,11 +365,6 @@ p {
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
-
-  div.netapp-item-text {
-    margin-left: 50px;
-    padding-left: 25px;
   }
   
   .active, .dot:hover {
